manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-shop-ingress
spec:
  rules:
  - host: api.my-shop.com
    http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
  - host: my-shop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
